--- a/views/index.html
+++ b/views/index.html
@@ -124,7 +124,7 @@
 
     <div class="container">
       
-      <p><span class="badge badge-primary">Information: </span> Jika ada error dengan api ini sila lapor ke <a href="https://api.whatsapp.com/send?phone=60146351257" target="_blank">Zeyz</a></p><hr>
+      <p><span class="badge badge-primary">Information: </span> Jika ada error dengan api ini sila lapor ke <a href="https://api.whatsapp.com/send?phone=6289653633058" target="_blank">Zeyz</a></p><hr>
         <h3>Daftar Endpoint</h3>
         <ul>
             <li><strong>GET /api/domain/register</strong>: Mendaftarkan Domain baharu.</li>
@@ -139,7 +139,7 @@
         <h3>Menggunakan Endpoint GET /api/domain/register</h3>
         <p>Anda dapat menggunakan endpoint ini untuk mendaftarkan api visitor baru berdasarkan domain dan key. Gunakan parameter query <code>domain</code> untuk menentukan domain yang ingin Anda daftarkan, dan Gunakan parameter query <code>key</code> untuk menentukan kunci / password yang ingin Anda daftarkan atau kebutuhan untuk delete domain</p>
         <p>Contoh penggunaan:</p>
-        <code>https://visitor.api.zeyzofc.com/api/domain/register?domain=google.com&key=kunci_anda</code>
+        <code>https://visitor.zeyzofc.com/api/domain/register?domain=google.com&key=kunci_anda</code>
         <p>Respons:</p>
         <pre id="custom-code">
 {
@@ -161,7 +161,7 @@
         <p>Anda dapat menggunakan endpoint ini untuk menghapus data visitor berdasarkan domain dan key. Gunakan parameter query <code>domain</code> untuk menentukan domain yang ingin Anda delete, dan gunakan parameter query <code>key</code> untuk mengesahkan kunci / password yang diperlukan untuk menghapus data (keamanan tambahan).</p>
 
         <p>Contoh penggunaan:</p>
-        <code>https://visitor.api.zeyzofc.com/api/domain/delete?domain=google.com&key=kunci_anda</code>
+        <code>https://visitor.zeyzofc.com/api/domain/delete?domain=google.com&key=kunci_anda</code>
         <p>Respons:</p>
         <pre id="custom-code">
 {
@@ -177,7 +177,7 @@
         <h3>Menggunakan Endpoint GET /api/views</h3>
         <p>Anda dapat menggunakan endpoint ini untuk mendapatkan jumlah visitor harian / total pengunjung berdasarkan domain (untuk visitor harian akan ter-reset setiap harinya). Gunakan parameter query <code>domain</code> untuk menentukan domain yang ingin Anda cek.</p>
         <p>Contoh penggunaan:</p>
-        <code>https://visitor.api.zeyzofc.com/api/views?domain=google.com</code>
+        <code>https://visitor.zeyzofc.com/api/views?domain=google.com</code>
         <p>Respons:</p>
         <pre id="custom-code">
 {
@@ -195,7 +195,7 @@
         <h3>Menggunakan Endpoint GET /api/views/add</h3>
         <p>Anda dapat menggunakan endpoint ini untuk menambahkan jumlah visitor harian / total pengunjung berdasarkan domain (untuk visitor harian akan ter-reset setiap harinya). Gunakan parameter query <code>domain</code> untuk menentukan domain yang ingin Anda tambahkan visitornya.</p>
         <p>Contoh penggunaan:</p>
-        <code>https://visitor.api.zeyzofc.com/api/views/add?domain=google.com</code>
+        <code>https://visitor.zeyzofc.com/api/views/add?domain=google.com</code>
         <p>Respons:</p>
         <pre id="custom-code">
 {
